<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".RegisterActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#0078BF"
            android:orientation="vertical">


            <TextView
                android:id="@+id/textViewNewAccount"
                android:layout_width="387dp"
                android:layout_height="74dp"
                android:layout_margin="8dp"
                android:gravity="center"
                android:text="@string/registerText"
                android:textColor="#2B1989"
                android:textSize="40sp"
                android:textStyle="bold" />


            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />

            <EditText
                android:id="@+id/txtName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:ems="10"
                android:hint="@string/name"
                android:inputType="textPersonName"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/txtLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:ems="10"
                android:hint="@string/last_name"
                android:inputType="textPersonName"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/txtPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:ems="10"
                android:hint="@string/phone"
                android:inputType="phone"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/txtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/txtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/txtGender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:ems="10"
                android:hint="@string/gender"
                android:inputType="textPersonName"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/editDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:ems="10"
                android:hint="@string/date_of_birth"
                android:inputType="date"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/txtCountry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:ems="10"
                android:hint="@string/country"
                android:inputType="textPersonName"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/txtAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:ems="10"
                android:hint="@string/address"
                android:inputType="textPersonName"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="25sp" />

            <Button
                android:id="@+id/btnRegister"
                android:layout_width="376dp"
                android:layout_height="66dp"
                android:layout_margin="8dp"
                android:backgroundTint="#2B1989"
                android:text="@string/register"
                android:textColor="#FFFFFF"
                android:textSize="25sp"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>
</layout>